added postman image

--- a/src/emails/templates/confirmation.hbs
+++ b/src/emails/templates/confirmation.hbs
@@ -1,4 +1,3 @@
-<p>Hey {{name}},</p>
-<p>Please click below to confirm your email</p>
+<h1>Hey {{name}},</h1>
 
-<p>If you did not request this email you can safely ignore it.</p>
+<p>Well this is a test, hope it works</p>
